# ffimage

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench_main.rs
benches/packed/: convert.rs
examples/: dynamic.rs  generic.rs
ffimage/: Cargo.toml
ffimage-app/: Cargo.toml
ffimage-app/src/: main.rs  parser.rs  ppm.rs  rgba.rs  y4m.rs
ffimage-yuv/: Cargo.toml
ffimage-yuv/benches/: bench_main.rs  convert.rs
ffimage-yuv/benches/packed/: convert.rs
ffimage-yuv/src/: lib.rs  yuv.rs  yuv420.rs  yuv422.rs  yuyv.rs
ffimage-yuv/tests/: convert.rs  yuv.rs  yuy422.rs  yuyv.rs
ffimage/benches/: convert.rs
ffimage/benches/packed/: convert.rs
ffimage/examples/: dynamic.rs  generic.rs
ffimage/src/: convert.rs  error.rs  iter.rs  lib.rs  pixel.rs  traits.rs
ffimage/src/color/: bgr.rs  gray.rs  mod.rs  rgb.rs
ffimage/src/core/: mod.rs  pixel.rs
ffimage/src/packed/: dynamic.rs  generic.rs  image.rs  iter.rs  matrix.rs  mod.rs  traits.rs
ffimage/src/packed/convert/: gold.rs  mod.rs  rayon.rs
ffimage/tests/: convert.rs  mod.rs
ffimage/tests/color/: bgr.rs  gray.rs  mod.rs  rgb.rs
ffimage/tests/packed/: convert.rs  generic.rs  image.rs  matrix.rs  mod.rs
src/: lib.rs
src/color/: bgr.rs  gray.rs  mod.rs  rgb.rs
src/core/: iter.rs  mod.rs  pixel.rs  traits.rs
src/packed/: convert.rs  convert_rayon.rs  dynamic.rs  generic.rs  image.rs  iter.rs  mod.rs  traits.rs
src/packed/convert/: gold.rs  mod.rs  rayon.rs
src/packed/image/: dynamic.rs  generic.rs  mod.rs
tests/color/: bgr.rs  gray.rs  mod.rs  rgb.rs
tests/packed/: convert.rs  dynamic.rs  generic.rs  image.rs  mod.rs
tests/packed/image/: dynamic.rs  generic.rs  mod.rs
