[package]
name = "ffimage"
description = "Foreign function image handling"
version = "0.1.0"
authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository= "https://github.com/raymanfx/ffimage"

[dependencies]
criterion = "^0.3"
num-traits = "^0.2"

[[bench]]
name = "bench_main"
harness = false
