[package]
name = "ffimage"
description = "Foreign function image handling"
version = "0.7.1"
authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository= "https://github.com/raymanfx/ffimage"

[dependencies]
cfg-if = "0.1"
num = "^0.3"
num-traits = "^0.2"
rayon = { version = "^1.0", optional = true }

[dev-dependencies]
criterion = "^0.3"

[features]
default = ["rayon"]

[[bench]]
name = "bench_main"
harness = false
