[package]
name = "ffimage-app"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "ffimage hero application"
authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
repository= "https://github.com/raymanfx/ffimage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
iced = { version = "0.7.0", features = ["async-std", "image"] }

ffimage = { version = "0.10.0", path = "../ffimage" }
ffimage_yuv = { version = "0.10.0", path = "../ffimage-yuv" }
