[package]
name = "ffimage_yuv"
version = "0.8.0"
authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository= "https://github.com/raymanfx/ffimage"

[dependencies.ffimage]
version = "0.8"
default-features = false
path = "../ffimage"

[dependencies]
num-traits = "^0.2"

[dev-dependencies]
criterion = "^0.3"

[features]
default = ["rayon"]
rayon = ["ffimage/rayon"]

[[bench]]
name = "bench_main"
harness = false
