[package]
name = "ffimage_yuv"
description = "YUV (aka YCbCr) pixel types for ffimage"
version = "0.9.0"
authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository= "https://github.com/raymanfx/ffimage"

[dependencies.ffimage]
version = "0.9"
default-features = false
path = "../ffimage"

[dependencies]
num-traits = "0.2.14"
itertools = "0.10.3"

[dev-dependencies]
criterion = "0.3.4"

[features]
default = ["rayon"]
rayon = ["ffimage/rayon"]

[[bench]]
name = "bench_main"
harness = false
