[package]
name = "ffimage_yuv"
description = "YUV (aka YCbCr) pixel types for ffimage"
version = "0.10.0"
authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository= "https://github.com/raymanfx/ffimage"

[dependencies.ffimage]
version = "0.10"
default-features = false
path = "../ffimage"

[dependencies]
num-traits = "0.2.15"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bench_main"
harness = false
