[package]
name = "ffimage"
description = "Foreign function image handling"
version = "0.9.0"
authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository= "https://github.com/raymanfx/ffimage"

[dependencies]
cfg-if = "1.0.0"
num = "0.4.0"
num-traits = "0.2.14"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "bench_main"
harness = false
