[package]
name = "ffimage"
description = "Foreign function image handling"
version = "0.10.0"
authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository= "https://github.com/raymanfx/ffimage"

[dependencies]
num-traits = { version = "0.2.15", default-features = false }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bench_main"
harness = false
